--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "mongoose": "^8.16.4",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
