--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.16.4",
-    "next": "15.3.2",
+    "next": "^15.4.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
